# spaceshipcli

./: .dockerignore  .env.example  .geminiignore  .gitignore  Dockerfile  GEMINI.md  GitVersion.yml  README.md  devbox.json  pyproject.toml  spaceship.py
.github/workflows/: linting.yml  super-linter.yml  test_and_build.yml
src/spaceship_cli/: client.py  config.py  main.py  utils.py
src/spaceship_cli/commands/: contacts.py  dns.py  domains.py
tests/: test_contacts.py  test_dns.py  test_domains.py  test_main.py
