[project]
name = "spaceship-cli"
version = "0.1.0"
description = "Spaceship.com CLI Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "typer>=0.21.1",
]

[project.scripts]
spaceship = "spaceship_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "respx>=0.22.0",
]
